<resources>
  <string name="app_name">XPayBack</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="_0">0</string>
  <string name="username">UserName</string>
  <string name="email">Email</string>
  <string name="maiden_name">Maiden Name</string>
  <string name="phone">Phone</string>
  <string name="age">Age:</string>
  <string name="phone_no">Phone No:</string>
  <string name="textview">TextView</string>
  <string name="lastname">LastName:</string>
  <string name="birthday">Birthday:</string>
  <string name="blood_group">Blood Group :</string>
</resources>
